--- a/src/app/components/heroes/heroes.component.scss
+++ b/src/app/components/heroes/heroes.component.scss
@@ -46,3 +46,11 @@
     }
   }
 }
+.btn-clear {
+  border: none;
+  background-color: rgb(57, 176, 223);
+  padding: 10px 20px;
+  border-radius: 5px;
+  color: #fff;
+  font-weight: bolder;
+}
