--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <a routerLink="/dashboard">Dashboard</a>
     <a routerLink="/heroes">Heroes</a>
     <a routerLink="/interaction-component">Interaction Component</a>
+    <a routerLink="/directives">Directives</a>
 </nav>
 
 <router-outlet></router-outlet>
