--- a/src/app/components/directives/parent/parent.component.html
+++ b/src/app/components/directives/parent/parent.component.html
@@ -22,7 +22,8 @@
             <input type="checkbox" [value]="!isUnchanged" (change)="isUnchanged=!isUnchanged" id="modified">
         </li>
         <li>
-            <label for="special">special: <input type="checkbox" [(ngModel)]="isSpecial" id="special"></label>
+            <label for="special">special: </label>
+            <input type="checkbox" [(ngModel)]="isSpecial" id="special">
         </li>
     </ul>
     <!-- <button type="button" (click)="setCurrentClasses()">Refresh currentClasses</button> -->
@@ -71,7 +72,7 @@
     <p>
         <label for="example-uppercase">(ngModelChange)="setUppercaseName($event)"
         </label>
-        <input [ngModel]="currentItem.name" (ngModelChange)="setUppercaseName($event)" id="example-uppercase">
+        <input [ngModel]="currentItem.name" (ngModelChange)="setUppercaseName($event)">
     </p>
 </div>
 
@@ -81,11 +82,13 @@
     <hr>
     <div *ngIf="isActive">This is example for ngif</div>
     <button (click)="isActive = !isActive">Tonggle div tag </button>
+
     <div>
         <div *ngIf="condition; else elseBlock">Content to render when condition is true.</div>
         <ng-template #elseBlock>Content to render when condition is false.</ng-template>
         <button (click)="condition = !condition">{{condition? "Condition is true": "Condition is true"}} </button>
     </div>
+
     <div>
         <h3>Guarding against null</h3>
         <div *ngIf="nullCustomer">Hello, <span>{{nullCustomer}}</span></div>
@@ -102,10 +105,12 @@
 
 <h1>ngFor</h1>
 <hr>
+
 <div class="box">
     <div *ngFor="let item of items;let i=index; let first = first; let last = last"
         [ngClass]="{'first': first, 'last': last}">{{i + 1}} - {{item.name}}</div>
 </div>
+
 
 <div>
     <h4 id="ngFor-trackBy">*ngFor trackBy</h4>
@@ -124,12 +129,16 @@
 
     <p>with trackBy</p>
     <div class="box">
+
         <div #withTrackBy *ngFor="let item of items; trackBy: trackByItems">({{item.id}}) {{item.name}}</div>
 
         <div id="withTrackByCnt" *ngIf="itemsWithTrackByCount">
             Item DOM elements change #{{itemsWithTrackByCount}} with trackBy
         </div>
     </div>
+
+
+
 
 </div>
 
@@ -191,12 +200,19 @@
         <p [appHighlight]="color" defaultColor="violet" appFontStyle="normal">
             Highlight me too! (hanve defaultColor)
         </p>
-    </div>
-    <h3>ngNonBindable with a directive</h3>
-    <h3>ngNonBindable with a directive</h3>
-    <div ngNonBindable [appHighlight]="'yellow'">This should not evaluate: {{ 1 +1 }}, but will highlight yellow.
+
     </div>
 
+    <h3>ngNonBindable with a directive</h3>
+
+    <div ngNonBindable [appHighlight]="'yellow'">
+        This should not evaluate: {{ 1 +1 }}, but will highlight yellow.
+    </div>
+    <!-- <div ngNonBindable>
+        <div [appHighlight]="'yellow'">
+            This should not evaluate: {{ 1 +1 }}, but will highlight yellow.
+        </div>
+    </div> -->
 
 
 </div>
@@ -209,7 +225,7 @@
         This paragraph is displayed because the condition is false.
     </div>
     <ng-template #block>
-        this is block
+        This paragraph is displayed because the condition is true.
     </ng-template>
     <button type="button" (click)="conditionUnless = !conditionUnless"
         [ngClass]="{ 'a': conditionUnless, 'b': !conditionUnless }">
